updated the About Me section and edited the links in the CSS

--- a/index.html
+++ b/index.html
@@ -30,8 +30,13 @@
   <!-- This is my banner image -->
   <div class="banner"></div>
 
+  <div class="portrait"></div>
+
   <article id="about-me" class="about-me">
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima optio assumenda nisi esse fuga, exercitationem tempora similique aspernatur cumque aperiam accusantium hic nam. Similique consequatur iusto modi dolores quis quo.</p>
+    <h2>About Me</h2>
+    <p>
+      Hello! My name is Zack Schreier, and I've recently begun learning to code. I have gotten a grasp on HTML and CSS and am currently working towards understanding JavaScript. At the moment, I'm looking towards finding a job that will let me continue learning more and more about coding on the back-end of things, as figuring out how to solve odd problems is endlessly interesting! I plan on updating this portfolio website regularly to put into practice everything I learn, so please look forward to seeing things changes here, there, and everywhere.
+    </p>
   </article>
 
   <section id="work" class="work">
