Added new photos and media queries along with more CSS optimization, with more changes to come

--- a/index.html
+++ b/index.html
@@ -39,8 +39,26 @@
     </p>
   </article>
 
-  <section id="work" class="work">
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima optio assumenda nisi esse fuga, exercitationem tempora similique aspernatur cumque aperiam accusantium hic nam. Similique consequatur iusto modi dolores quis quo.</p>
+  <section class="work">
+    <h2 id="work">My Work</h2>
+    <a href="https://zschreier.github.io/semantic-html/" target="_blank">
+      <div class="main-work">
+        <h3>HTML Semantics</h3>
+        <p>HTML and CSS</p>
+      </div>
+    </a>
+    <a href="https://google.com" target="_blank">
+      <div class="side-work1">
+        <h4>Example Project 1</h4>
+        <p>JavaScript Logic</p>
+      </div>
+    </a>
+    <a href="https://google.com" target="_blank">
+      <div class="side-work2">
+        <h4>Example Project 2</h4>
+        <p>CSS Trickery</p>
+      </div>
+    </a>
   </section>
 
   <footer id="contact-me">
